Added POST /events and user creation
